syntax = "proto3";

package ir.sndu.server;

enum ApiPeerType {
    PeerType_Unknown = 0;
    Private = 1;
    Group = 2;
}

message ApiOutPeer {
    ApiPeerType type = 1;
    int32 id = 2;
    int64 access_hash = 3;
}

message ApiUserOutPeer {
    int32 user_id = 1;
    int64 access_hash = 2;
}

message ApiPeer {
    ApiPeerType type = 1;
    int32 id = 2;
}

