syntax = 'proto3';

package ir.sndu.api;

import "scalapb/scalapb.proto";
import "api/peer.proto";

option java_package = "ir.sndu.api.messaging";
option java_multiple_files = true;
option (scalapb.options) = {
  flat_package: true
};

message ApiMessage {
    oneof message {
        ApiTextMessage text_message = 1;
        ApiDocumentMessage doc_message = 2;
    }
}

message ApiTextMessage {
    string text = 1; //the text @note Contains sensitive data!!!
    repeated int32 mentions = 2; //User mentions in message
}

message ApiDocumentMessage{
    int64 file_id = 1;
    int64 access_hash = 2;
    int32 file_size = 3;
    string name = 4;
    string mime_type = 5;
}

message ApiMessageContainer{
    int32 sender_user_id = 1;
    int64 random_id = 2;
    int64 date = 3;
    ApiMessage message = 4;
}

message ApiDialog{
    ir.sndu.api.ApiPeer peer = 1;
    int32 unread_count = 2;
    int64 sort_date = 3;
    int32 sender_user_id = 4;
    int64 random_id = 5;
    int64 date = 6;
    ApiMessage message = 7;
}