syntax = "proto3";

package ir.sndu;

option java_package = "ir.sndu.struct";

import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";

import "api/peer.proto";
import "api/message.proto";

option (scalapb.options) = {
    single_file: true
    flat_package: true
    primitive_wrappers: true
    preamble: "trait UserCommand"
    preamble: "trait UserQuery"
};

message UserCommands {
    message SendMessage {
        option (scalapb.message).extends = "UserCommand";
        int32 user_id = 1;
        ApiPeer peer = 2;
        int64 randomId = 3;
        google.protobuf.Int64Value date = 4;
        ApiMessage message = 5;
    }
    message SendMessageAck {
    }
}


message UserQueries {
    message GetState {
        int32 user_id = 1;
    }
}

message UserEnvelope {
    int32 user_id = 1;
    oneof command {
        UserCommands.SendMessage send_message = 2;
    }
    oneof query {
        UserQueries.GetState get_state = 3;
    }
}


